adding sbt test workaround to the readme